Clase 4 como aplicar componentes

--- a/src/TodoForm/TodoForm.css
+++ b/src/TodoForm/TodoForm.css
@@ -37,7 +37,7 @@ textarea::placeholder {
 }
 
 textarea:focus {
-	outline-color: #61DAFA;
+	outline-color: #3db39e;
 	font-family: 'Montserrat';
 }
 
