--- a/src/TodoItem/TodoItem.css
+++ b/src/TodoItem/TodoItem.css
@@ -4,8 +4,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 24px;
+  margin-top: 33px;
   box-shadow: 0px 5px 50px rgba(32, 35, 41, 0.15);
+  border-radius: 10px;
 }
 
 .TodoItem-p {
@@ -24,19 +25,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 48px;
-  width: 48px;
+  height: 32px;
+  width: 32px;
   font-size: 24px;
   font-weight: bold;
-  /* background-color: #CCC; */
 }
 
 .Icon-check {
+  background-image: url('../assets/uncheck.png');
+  background-position: center;
   position: absolute;
   left: 12px;
 }
 .Icon-check--active {
-  color: #4caf50;
+  background-image: url('../assets/check.png');
+  background-position: center;
 }
 
 .Icon-delete {
